[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-analysis-fourier-laplace"
version = "0.1.0"
description = "Signal Analysis Using Fourier and Laplace Transforms - Synthetic Demo"
authors = [
    { name="Sammeta Dinesh Kumar", email="sammetadineshkumar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
numpy = "==1.25.0"
scipy = "==1.12.0"
matplotlib = "==3.8.0"
sympy = "==1.12"
pandas = "==2.1.1"
pytest = "==7.4.2"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
